--- a/ads.html
+++ b/ads.html
@@ -82,9 +82,9 @@
 
 <script>
     // Direct URLs
-    let directLink = "https://contingentsolemnlykettle.com/kv4u8gs2me?key=db2423428b23027b1bf8b3a18ca7a1f5";
-    let popunderScriptURL = "https://contingentsolemnlykettle.com/d4/20/f9/d420f9de521ccfe13b9ab74021919a39.js";
-    let socialBarScriptURL = "https://contingentsolemnlykettle.com/4c/da/fb/4cdafb534e6a38d89d27c2341c4e026f.js";
+    let directLink = "https://rodesquad.com/vivztvqnud?key=c5c5670f3ab12323290d965ae02b6a95";
+    let popunderScriptURL = "https://rodesquad.com/d4/20/f9/d420f9de521ccfe13b9ab74021919a39.js";
+    let socialBarScriptURL = "https://rodesquad.com/4c/da/fb/4cdafb534e6a38d89d27c2341c4e026f.js";
 
     // Redirect after 5 seconds
     setTimeout(function () {
